figmaBI/scss/components/_listLogos.scss
@use '../base/breakpoints' as bp;

.listLogos {
    display: grid; 
    justify-items: center;
    max-width: 375px;
    grid-template-columns: repeat(3, 1fr);
    gap: 52px;
    margin: 0 auto;
    border-top: solid 1px #d8d8d8;
    border-bottom: solid 1px #d8d8d8;
    padding: 40px 0 40px 0;
    margin-bottom: 60px;
    
    
    @media (min-width: bp.$tablet) {
        display: flex;
        gap: 40px;
        max-width: 616px;
        margin-bottom: 140px;
    }

    @media (min-width: bp.$desktop) {
        gap: 149px;
        max-width: 1170px;
        margin-bottom: 180px;
    }

    &__image {
        width: 70px;
        height: auto;

        @media (min-width: bp.$desktop) {
            width: 90px;
        }
    }   
}
















































// .listLogos {
//     border-top: solid 1px #d8d8d8;
//     border-bottom: solid 1px #d8d8d8;

//     @media (min-width: 768px) {
//         width: 616px;
//         border-top: solid 1px #d8d8d8;
//         border-bottom: solid 1px #d8d8d8;
//         display: flex;
//         flex-direction: row;
//     }

    

//     &__container {
//         display: grid;
//         grid-template-columns: repeat(3, 1fr);
//         width: 375px;
//         padding: 30px;

    

//         &__image {
//             padding-top: 16.92px;
//             padding-bottom: 16.92px;
//             padding-right: 52.5px;

//             @media (min) {
                
//             }
            
//         }

        
//     }

    
// }

